<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="emailAddress">Enter your email address：</string>
    <string name="email">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile\nYour name:</string>
    <string name="name">Enter your name</string>
    <string name="youremail">Your email</string>
    <string name="picture">Your picture</string>
    <string name="clickforpic">Click the button above to take a picture</string>
    <string name="chat">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="type">Type here</string>
    <string name="tool">Go to Toolbar page</string>
    <string name="choice1">Choice 1</string>
    <string name="choice2">Choice 2</string>
    <string name="choice3">Choice 3</string>
    <string name="newMessage">What is your new message?</string>
    <string name="action_settings">setting</string>

</resources>
