<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/choice1"
        android:icon="@drawable/first"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/item2"
        android:title="@string/choice2"
        android:icon="@drawable/second"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item android:id="@+id/item3"
        android:title="@string/choice3"
        android:icon="@drawable/third"
        android:orderInCategory="3"
        app:showAsAction="always"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>