<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/the_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_alignParentLeft="true"
            android:id="@+id/buttonsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/send" />

        <EditText
            android:layout_centerHorizontal="true"
            android:id="@+id/Editxt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type" />

        <Button
            android:layout_alignParentRight="true"
            android:id="@+id/buttonreceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/receive" />

    </RelativeLayout>
</RelativeLayout>